namespaces/live.cloud-platform.service.justice.gov.uk/hmpps-breach-notice-preprod/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hmpps-breach-notice-preprod
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "preprod"
    cloud-platform.justice.gov.uk/namespace: "hmpps-breach-notice-preprod"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HMPPS"
    cloud-platform.justice.gov.uk/slack-channel: "ndelius_service_team"
    cloud-platform.justice.gov.uk/application: "hmpps-breach-notice"
    cloud-platform.justice.gov.uk/owner: "National Delius Service Team / Unilink <hmpps-unilink-delius@digital.justice.gov.uk>"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/hmpps-breach-notice-ui"
    cloud-platform.justice.gov.uk/team-name: "unilink"
    cloud-platform.justice.gov.uk/review-after: ""
